--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,5 +1,6 @@
 MONGODB_URL=mongodb+srv://Haritha:11roEYQJfGD4WTel@cluster0.ta6u3yt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=8090
-GOGLE_CLIENT_ID=40292577027-jahqubo9htscsamal2cv79ve8guqf1s5.apps.googleusercontent.com
-GOGLE_CLIENT_SECRET=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
-GOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=40292577027-jahqubo9htscsamal2cv79ve8guqf1s5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URL=http://127.0.0.1:8090/auth/google/callback
+SESSION_SECRET=LibraryManagementSystem
