--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,4 +1,4 @@
-MONGODB_URL=mongodb+srv://Haritha:11roEYQJfGD4WTel@cluster0.ta6u3yt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL=mongodb+srv://Haritha:11roEYQJfGD4WTel@cluster0.ta6u3yt.mongodb.net/library_management_system
 PORT=8090
 GOOGLE_CLIENT_ID=40292577027-jahqubo9htscsamal2cv79ve8guqf1s5.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
