add new files in route folder

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+MONGO_DB_URI=mongodb+srv://Haritha:Haritha1234@cluster0.ta6u3yt.mongodb.net/notes_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
