--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_DB_URI=mongodb+srv://Haritha:Haritha1234@cluster0.ta6u3yt.mongodb.net/notes_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+JWT_SECRET=sfgnsflsmdfsdfsfssdf
