fix bug and re create member , and librariyen collections

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 MONGO_DB_URI=mongodb+srv://Haritha:Haritha1234@cluster0.ta6u3yt.mongodb.net/notes_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
 JWT_SECRET=sfgnsflsmdafsdfsfssdf
+ADMIN_EMAIL=admin1@gmail.com
+ADMIN_PASSWORD=admin1234
