--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
-MONGO_DB_URI=mongodb+srv://Haritha:Haritha1234@cluster0.ta6u3yt.mongodb.net/notes_db?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URI=mongodb+srv://Haritha:Haritha1234@cluster0.ta6u3yt.mongodb.net/library_management_system
 PORT=3000
 JWT_SECRET=sfgnsflsmdafsdfsfssdf
 ADMIN_EMAIL=admin1@gmail.com
 ADMIN_PASSWORD=admin1234
+
+
