add new coudnar and mutter

--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,8 @@ PORT=3000
 JWT_SECRET=sfgnsflsmdafsdfsfssdf
 ADMIN_EMAIL=admin1@gmail.com
 ADMIN_PASSWORD=admin1234
+CLOUDINARY_NAME=dde5xshaw
+CLOUDINARY_API_KEY=884452279914842
+CLOUDINARY_API_SECRET=uOwuhbSSCFQSVan3LgFYpfgJp5A
 
 
