--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@types/validator": "^13.15.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -28,6 +29,7 @@
     "validator": "^13.15.15"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.3",
