--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.mjs",
+    "start": "node dist/server.js",
     "dev": "tsx watch src/server.mts",
     "build": "tsc"
   },
