--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "dist/server.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js",
-    "dev": "tsx watch src/server.mts",
-    "build": "tsc"
+    "start": "node dist/server.mjs",
+    "build": "tsc",
+    "dev": "tsx watch src/server.mts"
   },
   "keywords": [],
   "author": "",
